[gd_scene load_steps=10 format=1]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://scenes/spinner.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/black_ready.png" type="Texture" id=3]
[ext_resource path="res://assets/red_ready.png" type="Texture" id=4]
[ext_resource path="res://assets/yellow_ready.png" type="Texture" id=5]
[ext_resource path="res://scripts/speedbar.gd" type="Script" id=6]
[ext_resource path="res://assets/font1000.fnt" type="BitmapFont" id=7]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
light_color = Color( 0.671875, 0.561646, 0.561646, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[node name="Game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Spinner1" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 360, 1000 )
transform/rot = -180.0

[node name="Spinner2" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 360, 280 )

[node name="Control" type="Control" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Panel" type="Panel" parent="Control"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 630.0
margin/right = 720.0
margin/bottom = 650.0
custom_styles/panel = SubResource( 1 )

[node name="Player1" type="Control" parent="Control/Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="btnBlack" type="TextureButton" parent="Control/Panel/Player1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 614.0
margin/top = 23.0
margin/right = 714.0
margin/bottom = 123.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="btnRed" type="TextureButton" parent="Control/Panel/Player1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 614.0
margin/top = 109.0
margin/right = 714.0
margin/bottom = 209.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="btnYellow" type="TextureButton" parent="Control/Panel/Player1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 614.0
margin/top = 196.0
margin/right = 714.0
margin/bottom = 296.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="Speed" type="ProgressBar" parent="Control/Panel/Player1"]

rect/rotation = -90.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 80.0
margin/top = 22.0
margin/right = 710.0
margin/bottom = 102.0
custom_styles/fg = SubResource( 2 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 50.0
range/exp_edit = false
range/rounded = false
percent/visible = false
script/script = ExtResource( 6 )

[node name="Score" type="Label" parent="Control/Panel/Player1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 22.0
margin/right = 720.0
margin/bottom = 129.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.478431, 0.478431, 0.478431, 1 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Msg" type="Label" parent="Control/Panel/Player1"]

rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 94.0
margin/top = 120.0
margin/right = 981.0
margin/bottom = 227.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.478431, 0.478431, 0.478431, 1 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Player2" type="Control" parent="Control/Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="btnBlack" type="TextureButton" parent="Control/Panel/Player2"]

rect/rotation = 180.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 106.0
margin/top = -4.0
margin/right = 206.0
margin/bottom = 96.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="btnRed" type="TextureButton" parent="Control/Panel/Player2"]

rect/rotation = 180.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 106.0
margin/top = -87.0
margin/right = 206.0
margin/bottom = 13.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="btnYellow" type="TextureButton" parent="Control/Panel/Player2"]

rect/rotation = 180.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 106.0
margin/top = -176.0
margin/right = 206.0
margin/bottom = -76.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="Speed" type="ProgressBar" parent="Control/Panel/Player2"]

rect/rotation = 90.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 639.0
margin/top = -1.0
margin/right = 1269.0
margin/bottom = 79.0
custom_styles/fg = SubResource( 2 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 50.0
range/exp_edit = false
range/rounded = false
percent/visible = false
script/script = ExtResource( 6 )

[node name="Score" type="Label" parent="Control/Panel/Player2"]

rect/rotation = 180.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 722.0
margin/top = -4.0
margin/right = 1442.0
margin/bottom = 103.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.478431, 0.478431, 0.478431, 1 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Msg" type="Label" parent="Control/Panel/Player2"]

rect/rotation = 180.0
rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 633.0
margin/top = -104.0
margin/right = 1520.0
margin/bottom = 3.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.478431, 0.478431, 0.478431, 1 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="EntreRound" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="block" from="." to="Spinner2" method="_on_Game_block"]

[connection signal="block" from="." to="Spinner1" method="_on_Game_block"]

[connection signal="unblock" from="." to="Spinner2" method="_on_Game_unblock"]

[connection signal="unblock" from="." to="Spinner1" method="_on_Game_unblock"]

[connection signal="limit" from="Spinner1" to="." method="_on_Spinner1_limit"]

[connection signal="speed" from="Spinner1" to="Control/Panel/Player1/Speed" method="_on_Spinner_speed"]

[connection signal="zero" from="Spinner1" to="." method="_on_Spinner1_zero"]

[connection signal="limit" from="Spinner2" to="." method="_on_Spinner2_limit"]

[connection signal="speed" from="Spinner2" to="Control/Panel/Player2/Speed" method="_on_Spinner_speed"]

[connection signal="zero" from="Spinner2" to="." method="_on_Spinner2_zero"]

[connection signal="pressed" from="Control/Panel/Player1/btnBlack" to="Spinner1" method="_on_btnBlack_pressed"]

[connection signal="pressed" from="Control/Panel/Player1/btnRed" to="Spinner1" method="_on_btnRed_pressed"]

[connection signal="pressed" from="Control/Panel/Player1/btnYellow" to="Spinner1" method="_on_btnYellow_pressed"]

[connection signal="pressed" from="Control/Panel/Player2/btnBlack" to="Spinner2" method="_on_btnBlack_pressed"]

[connection signal="pressed" from="Control/Panel/Player2/btnRed" to="Spinner2" method="_on_btnRed_pressed"]

[connection signal="pressed" from="Control/Panel/Player2/btnYellow" to="Spinner2" method="_on_btnYellow_pressed"]

[connection signal="timeout" from="EntreRound" to="." method="_on_EntreRound_timeout"]


